# SCARA-RRPR

./: README.md  frames_2026-02-06_15.54.10.gv  index.html
install/: local_setup.sh  setup.sh
install/avig_msg/share/avig_msg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mi_pkg_python/share/mi_pkg_python/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mi_pkg_python/share/mi_pkg_python/launch/: proyecto_rviz2.launch.py  todo_scara.launch.py
install/mi_pkg_python/share/mi_pkg_python/urdf/: banda.urdf  ensamblaje.urdf  ensamblaje.urdf.xacro
install/mi_pkg_python/share/mi_pkg_python/urdf/meshes/: banda_base_link.STL  banda_link.STL  efector_link.STL
log/: latest_build
src/avig_msg/: CMakeLists.txt
src/mi_pkg_python/: camera_calibration.yaml  setup.cfg  setup.py
src/mi_pkg_python/acciones/: action_client.py
src/mi_pkg_python/cam/: 0_captura.py  1_calib.py  2_cam.py  3_apriltag.py  4_orientaion.py  4_orientaionED.py  camera_calibration.yaml  camera_calibrationJS.yaml  camera_calibrationJason.yaml
src/mi_pkg_python/launch/: display.launch  gazebo.launch  proyecto_rviz2.launch.py  todo_scara.launch.py  visualizar_rviz.launch.py
src/mi_pkg_python/mqtt/: equipo1.py  equipo2.py  stepper_mqtt.py
src/mi_pkg_python/proyecto/: camera_calibration.yaml  camera_calibrationED.yaml  driver_scara.py  fsm.py  orientacion_juntas.py  orientacion_juntas_Scara2.py  prueba_publicador.py  vision_to_rviz.py
src/mi_pkg_python/urdf/: ensamblaje.urdf  ensamblaje.urdf.xacro  urdf_1.csv
(+94 files in other folders)
